styles:spacing issue fixed

--- a/src/routes/home/howItWorks/howItWorks.module.scss
+++ b/src/routes/home/howItWorks/howItWorks.module.scss
@@ -149,7 +149,7 @@
                     font-size: 18px;
                     font-style: normal;
                     font-weight: 400;
-                    max-width: 411px;
+                    max-width: 390px;
                     line-height: 30px;
 
                     @include respond-to("md") {
